# Trends

./: .gitignore  Trends_IMPLEMENTATION_GUIDE_v1.3_agent_full_personal_plus_history.md  pyproject.toml  requirements.in  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml  daily_batch.yml  deploy_web.yml
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
batch/: cost_tracker.py  degrade.py  run.py
configs/: domain_filters.yaml  print_allowlist.yaml  public_rank_rules.yaml  relation_weights.yaml  source_catalog.yaml  type_diversification.yaml
infra/firebase/: firestore.rules
scripts/: apply_resolution.py  manual_run.py  seed_config.py  seed_config_rest.py  set_admin_claim.py
tests/batch/: test_cost_tracker.py  test_degrade.py  test_publish_health_gate.py  test_run_date_validation.py  test_run_domain_inference.py  test_run_lock.py  test_run_publish_mode.py  test_run_shadow_only.py  test_runtime_feature_flags.py
tests/connectors/: test_apple_music.py  test_base.py  test_billboard_japan.py  test_google_trends.py  test_netflix.py  test_rakuten_fashion.py  test_registry.py  test_spotify_charts.py  test_tiktok_creative_center.py  test_tver.py  test_wear.py  test_x_search.py  test_yahoo_realtime.py  test_youtube.py  test_zozo.py
tests/core/: test_candidate_store.py  test_diversification.py  test_domain_classifier.py  test_evaluation.py  test_evidence.py  test_firestore_client.py  test_fusion_model.py  test_labels.py  test_llm_client.py  test_manual_resolution.py  test_models.py  test_noise_filter.py  (+22 more)
(+37 files in other folders)
